# finalgo

./: .gitignore  Cargo.toml  LICENSE  README.md  TRADING.md  finalgo.bat  finalgo.sh
.cargo/: config.toml
.github/workflows/: monthly_eval.yml
database.lmdb/: data.mdb  lock.mdb
eval/: 01.06.2026.json  18.06.2026.json  README.md
src/: cli.rs  consts.rs  data.rs  database.rs  engine.rs  eval.rs  interface.rs  main.rs  math.rs  regime.rs  score.rs  utils.rs
src/cli/: eval.rs  mod.rs  run.rs  trade.rs
src/eval/: loss.rs  metric.rs  mod.rs  precision.rs  profit.rs  stats.rs
src/indicator/: adx.rs  atr.rs  bol_width.rs  boll.rs  bos.rs  donchian.rs  ema.rs  er.rs  exits.rs  liquidity.rs  mod.rs  regime.rs  rel_vol.rs  roc.rs  rsi.rs  rvol.rs  stoch.rs  stochastic.rs  swing.rs  veto.rs
src/score/: final_score.rs  mod.rs  participation.rs  quality.rs  strength.rs  trend.rs  volatility.rs
