[package]
name = "finalgo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
yahoo_finance_api = "4.1.0"
tokio = { version = "1.52.3", features = ["rt", "net", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
trading-calendar = "0.2.3"
time = "0.3.47"
