[package]
name = "finalgo"
version = "0.1.0"
edition = "2024"
description = "A financial trading algorithm."
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
apca = "0.30.0"
tokio = { version = "1.52.3", features = ["rt", "net", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
trading-calendar = "0.2.3"
chrono = "0.4.45"
indicatif = "0.18.4"
tracing-indicatif = "0.3.14"
heed = { version = "0.22.1", default-features = false, features = ["serde", "serde-bincode"] }
serde = { version = "1.0.228", features = ["derive"] }
rustc-hash = "2.1.2"
